--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,17 +8,13 @@
 </ul>
 
 <ul class="icons">
-  <!--
-  <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
-  <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-  <li><a href="https://instagram.com/{{site.instagram}}" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li>
-  <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
-  -->
-  {% for link in site.data.profile.social-links %}
-    <li>
-      <a href={{link.url}} class="icon {{link.font-awesome-icon}}" rel="nofollow" target="_blank">
-        <span class="label">{{link.name}}</span>
-      </a>
-    </li>
-  {% endfor %}
+  {% if site.data.profile.social-links.size > 0 %}
+    {% for link in site.data.profile.social-links %}
+      <li>
+        <a href={{link.url}} class="icon {{link.font-awesome-icon}}" rel="nofollow" target="_blank">
+          <span class="label">{{link.name}}</span>
+        </a>
+      </li>
+    {% endfor %}
+  {% endif %}
 </ul>
