--- a/_sass/layout/_intro.scss
+++ b/_sass/layout/_intro.scss
@@ -30,10 +30,16 @@
 		}
 
 		p {
-			font-size: 1.25rem;
+			font-size: 1rem;
 			font-style: italic;
 			margin-top: -0.25rem;
 			text-align: center;
+			line-height: 1.5;
+		}
+
+		a {
+			color: inherit;
+			border-bottom-color: inherit;
 		}
 
 		& + #header {
