--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -40,5 +40,7 @@
 
 <!-- Copyright -->
 <div id="copyright">
-  <ul><li>&copy; HTML5 UP</li><li>Design by <a href="https://html5up.net" rel="nofollow">HTML5 UP</a></li><li>Jekyll Integration by <a href="https://slapform.com">Slapform</a> </li></ul>
+  <ul><li>&copy; {{site.data.profile.name}} 2019</li>
+  <!-- <li>Design by <a href="https://html5up.net" rel="nofollow">HTML5 UP</a></li>
+  <li>Jekyll Integration by <a href="https://slapform.com">Slapform</a> </li></ul> -->
 </div>
