--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
         <header id="header">
-          <a href="{{ "/" | absolute_url }}" class="logo">{{site.title}}</a>
+          <a href="{{ "/" | absolute_url }}" class="logo">{{site.data.profile.site_title}}</a>
         </header>
 
 				<!-- Nav -->
@@ -62,14 +62,6 @@
           </script>
           <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
         </div><!-- /.comments-wrapper -->
-
-
-					<!-- Footer -->
-						<footer>
-              <ul class="actions">
-                <li><a href="{{ "/blog/" | absolute_url }}" class="button">Our Blog</a></li>
-              </ul>
-						</footer>
 					</div>
 
 				<!-- Footer -->
