--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,17 +1,22 @@
 <ul class="links">
-  <!--
-  <li class="{% if page.url == "/" %} active {% endif %}"><a href="{{ "/" | absolute_url }}">Theme Home</a></li>
+  
+  <!-- <li class="{% if page.url == "/" %} active {% endif %}"><a href="{{ "/" | absolute_url }}">Theme Home</a></li>
   <li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="{{ "/about/" | absolute_url }}">About</a></li>
   <li class="{% if page.url contains '/blog/' %} active {% endif %}"><a href="{{ "/blog/" | absolute_url }}">Blog</a></li>
-  <li class="{% if page.url contains '/elements/' %} active {% endif %}"><a href="{{ "/elements/" | absolute_url }}">Elements Reference</a></li>
-  -->
+  <li class="{% if page.url contains '/elements/' %} active {% endif %}"><a href="{{ "/elements/" | absolute_url }}">Elements Reference</a></li> -->
+ 
+  <li class="active"><a href="#intro" class="scrolly">Welcome!</a></li>
+  <li class="active"><a href="#experience" class="scrolly">Experience</a></li>
+  <li class="active"><a href="#education" class="scrolly">Education</a></li>
+  <li class="active"><a href="#projects" class="scrolly">Projects</a></li>
+  
 </ul>
 
 <ul class="icons">
-  {% if site.data.profile.social-links.size > 0 %}
-    {% for link in site.data.profile.social-links %}
+  {% if site.data.profile.social.size > 0 %}
+    {% for social in site.data.profile.social %}
       <li>
-        <a href={{link.url}} class="icon {{link.font-awesome-icon}}" rel="nofollow" target="_blank">
+        <a href={{social.url}} class="icon {{social.fontawesome_icon}}" rel="nofollow" target="_blank">
           <span class="label">{{link.name}}</span>
         </a>
       </li>
