--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="{{ "/" | absolute_url }}" class="logo">{{site.title}}</a>
+					<a href="{{ "/" | absolute_url }}" class="logo">{{site.data.profile.site_title}}</a>
 				</header>
 
 				<!-- Nav -->
@@ -33,13 +33,7 @@
 					<section class="post">
 						<p>{{content}}</p>
 					</section>
-
-					<!-- Footer -->
-						<footer>
-              <ul class="actions">
-								<li><a href="{{ "/blog/" | absolute_url }}" class="button">Our Blog</a></li>
-              </ul>
-						</footer>
+					
 					</div>
 
 				<!-- Footer -->
