* Added back-to-top button from https://github.com/vfeskov/vanilla-back-to-top

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,6 @@
 	</head>
 
 	<body class="is-loading">
-
 		<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
 
@@ -59,5 +58,11 @@
 		{% include scripts-main.html %}
 		{% include tracking.html %}
 
+		<script src="https://unpkg.com/vanilla-back-to-top@7.2.0/dist/vanilla-back-to-top.min.js"></script>
+		<script>addBackToTop({
+		diameter: 56,
+		backgroundColor: '#3F3E46',
+		textColor: '#fff'
+		})</script>
 	</body>
 </html>
