* Lightbox implemented from: https://jekyllcodex.org/without-plugin/lightbox/ * Added GIFs

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,5 +64,8 @@
 		backgroundColor: '#3F3E46',
 		textColor: '#fff'
 		})</script>
+
+		<script src="/js/jquery.min.js"></script>
+		{% include lightbox.html %}
 	</body>
 </html>
