* Added captions for image gallery. * Added more UnityEditor gifs

--- a/_sass/components/_image.scss
+++ b/_sass/components/_image.scss
@@ -50,6 +50,12 @@
 			img {
 				width: 100%;
 			}
+
+			p {
+				font-size: .8rem;
+				text-align: center;
+				word-wrap: break-word;
+			}
 		}
 
 		&.main {
