--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,7 +65,8 @@
 		textColor: '#fff'
 		})</script>
 
-		<script src="/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
 		{% include lightbox.html %}
+
 	</body>
 </html>
