* test removal of loading blocker

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,8 @@
 		{% include head.html %}
 	</head>
 
-	<body class="is-loading">
+	<!-- <body class="is-loading"> -->
+	<body>
 		<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
 
