* Added more info * First nice draft

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,7 @@
  
   <li class="active"><a href="#intro" class="scrolly">Welcome!</a></li>
   <li class="active"><a href="#experience" class="scrolly">Experience</a></li>
+  <li class="active"><a href="#interlude" class="scrolly">{{site.data.profile.interlude_header}}</a></li>
   <li class="active"><a href="#projects" class="scrolly">Projects</a></li>
   <li class="active"><a href="#education" class="scrolly">Education</a></li>
   
