* First complete page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
   <li class="active"><a href="#interlude" class="scrolly">{{site.data.profile.interlude_header}}</a></li>
   <li class="active"><a href="#projects" class="scrolly">Projects</a></li>
   <li class="active"><a href="#education" class="scrolly">Education</a></li>
-  
+  <li class="active"><a href="#moreprojects" class="scrolly">More</a></li>
 </ul>
 
 <ul class="icons">
