* Added Download CV button

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,7 @@
   <li class="{% if page.url contains '/elements/' %} active {% endif %}"><a href="{{ "/elements/" | absolute_url }}">Elements Reference</a></li> -->
  
   <li class="active"><a href="#intro" class="scrolly">Welcome!</a></li>
+  <li class="active"><a href="#cv" class="scrolly">CV</a></li>
   <li class="active"><a href="#experience" class="scrolly">Experience</a></li>
   <li class="active"><a href="#interlude" class="scrolly">{{site.data.profile.interlude_header}}</a></li>
   <li class="active"><a href="#projects" class="scrolly">Projects</a></li>
