* Updated content. * Updated resume.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,11 +16,11 @@
 		<div id="wrapper" class="fade-in">
 
 			<!-- Intro -->
-			<div id="intro">
+			<div style="clear: both;" id="intro">
 				<h1>{{site.data.profile.name}}</h1>
 				<h2>{{site.data.profile.short_description}}</h2>
 				<p>
-					{{site.data.profile.description}} <br>
+					{{site.data.profile.description}} <br />
 					{% if site.data.profile.position-name != ""
 					   and site.data.profile.current-company-name != "" 
 					   and site.data.profile.current-company-website != "" %}
