~ Update website to latest experiences

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@
 					Currently a {{site.data.profile.current-position-name}} @
 					<a href="{{site.data.profile.current-company-website}}" target="_blank" rel="nofollow">
 						{{site.data.profile.current-company-name}}
-					</a>
+					</a>  in {{ site.data.profile.location }}
 					{% endif %}
 				</p>
 				<ul class="actions">
